# openinbox-ai

./: Dockerfile  README.md  app.py  baseline.py  inference.py  openenv.yaml  pyproject.toml
env/: environment.py  models.py
server/: app.py
