[project]
name = "openinbox-ai"
version = "0.1.0"
description = "OpenEnv Email Triage Environment"
authors = [
    { name = "Muralidharan S" }
]

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openenv-core>=0.2.0"
]

# ✅ IMPORTANT — THIS FIXES YOUR ERROR
[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"